--- a/src/styles.css
+++ b/src/styles.css
@@ -2,4 +2,10 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+
+  font-family: 'Roboto', 'Arial', 'Helvetica Neue', 'Lato', sans-serif;
+}
+
+li {
+  list-style: none;
 }
